x86GenHook/GenInject.h

// Retoolkit - Scripting-based reverse engineering toolkit for Windows OS'es
// Copyright (C) 2010  James Leskovar
// 
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
// 
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
// 
// You should have received a copy of the GNU General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>.

#ifndef GENINJECT_H
#define GENINJECT_H

#include <Windows.h>
#include "GenConfig.h"

#ifdef __cplusplus
extern "C" {
#endif

GENHOOK_API DWORD GenSyncInjection( HANDLE remoteThread );

GENHOOK_API HANDLE GenClrInject(HANDLE targetProc, 
                               const wchar_t* dllPath, 
                               const wchar_t* appBase, 
                               const wchar_t* privatePath, 
                               const wchar_t* userData);

GENHOOK_API DWORD GenNativeInject(HANDLE targetProc, 
                                  const wchar_t* dllPath, 
                                  const wchar_t* userData);

#ifdef __cplusplus
}
#endif

#endif // GENINJECT_H